--- a/Bounce/STPlaylistViewController.xib
+++ b/Bounce/STPlaylistViewController.xib
@@ -46,23 +46,6 @@
 								<reference key="NSNextResponder" ref="247451179"/>
 								<int key="NSvFlags">292</int>
 								<array class="NSMutableArray" key="NSSubviews">
-									<object class="IBUIImageView" id="452676940">
-										<reference key="NSNextResponder" ref="674469806"/>
-										<int key="NSvFlags">256</int>
-										<string key="NSFrame">{{15, 0}, {291, 31}}</string>
-										<reference key="NSSuperview" ref="674469806"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="998260963"/>
-										<bool key="IBUIOpaque">NO</bool>
-										<bool key="IBUIClipsSubviews">YES</bool>
-										<int key="IBUIContentMode">4</int>
-										<bool key="IBUIMultipleTouchEnabled">YES</bool>
-										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<object class="NSCustomResource" key="IBUIImage">
-											<string key="NSClassName">NSImage</string>
-											<string key="NSResourceName">img_search_box.png</string>
-										</object>
-									</object>
 									<object class="IBUIView" id="998260963">
 										<reference key="NSNextResponder" ref="674469806"/>
 										<int key="NSvFlags">292</int>
@@ -72,7 +55,6 @@
 												<int key="NSvFlags">292</int>
 												<string key="NSFrame">{{15, 15}, {100, 100}}</string>
 												<reference key="NSSuperview" ref="998260963"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="452089117"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -83,7 +65,6 @@
 												<int key="NSvFlags">292</int>
 												<string key="NSFrame">{{123, 20}, {172, 20}}</string>
 												<reference key="NSSuperview" ref="998260963"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="322635543"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
@@ -116,7 +97,6 @@
 												<int key="NSvFlags">292</int>
 												<string key="NSFrame">{{123, 38}, {172, 20}}</string>
 												<reference key="NSSuperview" ref="998260963"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="417760291"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
@@ -137,7 +117,6 @@
 												<int key="NSvFlags">292</int>
 												<string key="NSFrame">{{123, 54}, {172, 34}}</string>
 												<reference key="NSSuperview" ref="998260963"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="214947094"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
@@ -165,7 +144,6 @@
 										</array>
 										<string key="NSFrame">{{0, 38}, {320, 129}}</string>
 										<reference key="NSSuperview" ref="674469806"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="763350761"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -177,12 +155,41 @@
 										</object>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
-									<object class="IBUILabel" id="214947094">
+									<object class="IBUIView" id="859451929">
 										<reference key="NSNextResponder" ref="674469806"/>
 										<int key="NSvFlags">292</int>
+										<string key="NSFrameSize">{320, 31}</string>
+										<reference key="NSSuperview" ref="674469806"/>
+										<reference key="NSNextKeyView" ref="452676940"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<object class="NSColor" key="IBUIBackgroundColor">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MQA</bytes>
+											<reference key="NSCustomColorSpace" ref="659164161"/>
+										</object>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									</object>
+									<object class="IBUIImageView" id="452676940">
+										<reference key="NSNextResponder" ref="674469806"/>
+										<int key="NSvFlags">256</int>
+										<string key="NSFrame">{{15, 0}, {291, 31}}</string>
+										<reference key="NSSuperview" ref="674469806"/>
+										<reference key="NSNextKeyView" ref="998260963"/>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">4</int>
+										<bool key="IBUIMultipleTouchEnabled">YES</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<object class="NSCustomResource" key="IBUIImage">
+											<string key="NSClassName">NSImage</string>
+											<string key="NSResourceName">img_search_box.png</string>
+										</object>
+									</object>
+									<object class="IBUILabel" id="214947094">
+										<reference key="NSNextResponder" ref="674469806"/>
+										<int key="NSvFlags">269</int>
 										<string key="NSFrame">{{20, 171}, {280, 20}}</string>
 										<reference key="NSSuperview" ref="674469806"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="713212709"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -201,10 +208,10 @@
 									</object>
 									<object class="IBUIView" id="713212709">
 										<reference key="NSNextResponder" ref="674469806"/>
-										<int key="NSvFlags">293</int>
+										<int key="NSvFlags">269</int>
 										<string key="NSFrame">{{0, 199}, {320, 1}}</string>
 										<reference key="NSSuperview" ref="674469806"/>
-										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
 											<int key="NSColorSpace">2</int>
@@ -215,8 +222,7 @@
 								</array>
 								<string key="NSFrameSize">{320, 200}</string>
 								<reference key="NSSuperview" ref="247451179"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="452676940"/>
+								<reference key="NSNextKeyView" ref="859451929"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -228,7 +234,6 @@
 						</array>
 						<string key="NSFrame">{{0, 52}, {320, 496}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="674469806"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="36372715">
@@ -255,7 +260,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{38, 9}, {34, 34}}</string>
 								<reference key="NSSuperview" ref="276043588"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="738203775"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -266,7 +270,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{85, 15}, {215, 21}}</string>
 								<reference key="NSSuperview" ref="276043588"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="247451179"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -296,7 +299,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{30, 52}</string>
 								<reference key="NSSuperview" ref="276043588"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="612335999"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -329,7 +331,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 52}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="973086427"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -342,7 +343,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 548}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="276043588"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -454,6 +454,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">headerView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="674469806"/>
+					</object>
+					<int key="connectionID">38</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="247451179"/>
 						<reference key="destination" ref="372490531"/>
@@ -519,11 +527,13 @@
 						<reference key="object" ref="674469806"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="713212709"/>
-							<reference ref="452676940"/>
 							<reference ref="998260963"/>
+							<reference ref="452676940"/>
 							<reference ref="214947094"/>
+							<reference ref="859451929"/>
 						</array>
 						<reference key="parent" ref="247451179"/>
+						<string key="objectName">Header View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
@@ -596,6 +606,11 @@
 						<reference key="object" ref="763350761"/>
 						<reference key="parent" ref="998260963"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">39</int>
+						<reference key="object" ref="859451929"/>
+						<reference key="parent" ref="674469806"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -616,6 +631,7 @@
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="28.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="39.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -623,80 +639,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">37</int>
+			<int key="maxID">39</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">STPlaylistViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">backButtonPressed:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">backButtonPressed:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">backButtonPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bounceQueueLabel">UILabel</string>
-						<string key="currentAlbumLabel">UILabel</string>
-						<string key="currentArtistLabel">UILabel</string>
-						<string key="currentSongImageView">UIImageView</string>
-						<string key="currentSongLabel">UILabel</string>
-						<string key="currentlyPlayingView">UIView</string>
-						<string key="friendIconView">UIImageView</string>
-						<string key="friendNameLabel">UILabel</string>
-						<string key="tableView">UITableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bounceQueueLabel">
-							<string key="name">bounceQueueLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="currentAlbumLabel">
-							<string key="name">currentAlbumLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="currentArtistLabel">
-							<string key="name">currentArtistLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="currentSongImageView">
-							<string key="name">currentSongImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="currentSongLabel">
-							<string key="name">currentSongLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="currentlyPlayingView">
-							<string key="name">currentlyPlayingView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="friendIconView">
-							<string key="name">friendIconView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="friendNameLabel">
-							<string key="name">friendNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tableView">
-							<string key="name">tableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/STPlaylistViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
